LibNoDaveConnectionLibrary/Communication/LibNoDave/libnodave.net.cs


#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveWriteBits")]
#else
            [DllImport("__Internal", EntryPoint = "daveWriteBits")]
#endif
            protected static extern int daveWriteBits32(IntPtr dc, int area, int DBnumber, int start, int len, byte[] buffer);
            public int writeBits(int area, int DBnumber, int start, int len, byte[] buffer)
            {
                if (IntPtr.Size == 8)
                    return daveWriteBits64(pointer, area, DBnumber, start, len, buffer);
                return daveWriteBits32(pointer, area, DBnumber, start, len, buffer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveBuildAndSendPDU")]
#else
            [DllImport("__Internal", EntryPoint = "daveBuildAndSendPDU")]
#endif
            protected static extern int daveBuildAndSendPDU64(IntPtr dc, IntPtr p, byte[] b1, int l1, byte[] b2, int l2);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveBuildAndSendPDU")]
#else
            [DllImport("__Internal", EntryPoint = "daveBuildAndSendPDU")]
#endif
            protected static extern int daveBuildAndSendPDU32(IntPtr dc, IntPtr p, byte[] b1, int l1, byte[] b2, int l2);
            public int daveBuildAndSendPDU(PDU myPDU, byte[] Parameter, byte[] Data)
            {
                int res = 0;
                if (IntPtr.Size == 8)
                    res = daveBuildAndSendPDU64(pointer, myPDU.pointer, Parameter, Parameter.Length, Data, Data.Length);
                else
                    res = daveBuildAndSendPDU32(pointer, myPDU.pointer, Parameter, Parameter.Length, Data, Data.Length);
                //return p;
                return res;
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveGetU8")]
#else
            [DllImport("__Internal", EntryPoint = "daveGetU8")]
#endif
            protected static extern int daveGetU8_64(IntPtr dc);

#if !IPHONE
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveGetU8")]
#else
            [DllImport("__Internal", EntryPoint = "daveGetU8")]
#endif
            protected static extern int daveGetU8_32(IntPtr dc);
            public int getU8()
            {
                if (IntPtr.Size == 8)
                    return daveGetU8_64(pointer);
                return daveGetU8_32(pointer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveGetAnswLen")]
#else
            [DllImport("__Internal", EntryPoint = "daveGetAnswLen")]
#endif
            protected static extern int daveGetAnswLen64(IntPtr dc);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveGetAnswLen")]
#else
            [DllImport("__Internal", EntryPoint = "daveGetAnswLen")]
#endif
            protected static extern int daveGetAnswLen32(IntPtr dc);
            public int getAnswLen()
            {
                if (IntPtr.Size == 8)
                    return daveGetAnswLen64(pointer);
                return daveGetAnswLen32(pointer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveGetMaxPDULen")]
#else
            [DllImport("__Internal", EntryPoint = "daveGetMaxPDULen")]
#endif
            protected static extern int daveGetMaxPDULen64(IntPtr dc);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveGetMaxPDULen")]
#else
            [DllImport("__Internal", EntryPoint = "daveGetMaxPDULen")]
#endif
            protected static extern int daveGetMaxPDULen32(IntPtr dc);
            public int getMaxPDULen()
            {
                if (IntPtr.Size == 8)
                    return daveGetMaxPDULen64(pointer);
                return daveGetMaxPDULen32(pointer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "davePrepareReadRequest")]
#else
            [DllImport("__Internal", EntryPoint = "davePrepareReadRequest")]
#endif
            protected static extern int davePrepareReadRequest64(IntPtr dc, IntPtr p);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "davePrepareReadRequest")]
#else
            [DllImport("__Internal", EntryPoint = "davePrepareReadRequest")]
#endif
            protected static extern int davePrepareReadRequest32(IntPtr dc, IntPtr p);
            public PDU prepareReadRequest()
            {
                PDU p = new PDU();
                if (IntPtr.Size == 8)
                    davePrepareReadRequest64(pointer, p.pointer);
                else
                    davePrepareReadRequest32(pointer, p.pointer);
                return p;
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "davePrepareWriteRequest")]
#else
            [DllImport("__Internal", EntryPoint = "davePrepareWriteRequest")]
#endif
            protected static extern int davePrepareWriteRequest64(IntPtr dc, IntPtr p);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "davePrepareWriteRequest")]
#else
            [DllImport("__Internal", EntryPoint = "davePrepareWriteRequest")]
#endif
            protected static extern int davePrepareWriteRequest32(IntPtr dc, IntPtr p);
            public PDU prepareWriteRequest()
            {
                PDU p = new PDU();
                if (IntPtr.Size == 8)
                    davePrepareWriteRequest64(pointer, p.pointer);
                else
                    davePrepareWriteRequest32(pointer, p.pointer);
                return p;
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveExecReadRequest")]
#else
            [DllImport("__Internal", EntryPoint = "daveExecReadRequest")]
#endif
            protected static extern int daveExecReadRequest64(IntPtr dc, IntPtr p, IntPtr rl);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveExecReadRequest")]
#else
            [DllImport("__Internal", EntryPoint = "daveExecReadRequest")]
#endif
            protected static extern int daveExecReadRequest32(IntPtr dc, IntPtr p, IntPtr rl);
            public int execReadRequest(PDU p, resultSet rl)
            {
                if (IntPtr.Size == 8)
                    return daveExecReadRequest64(pointer, p.pointer, rl.pointer);
                return daveExecReadRequest32(pointer, p.pointer, rl.pointer);
            }


#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveExecWriteRequest")]
#else
            [DllImport("__Internal", EntryPoint = "daveExecWriteRequest")]
#endif
            protected static extern int daveExecWriteRequest64(IntPtr dc, IntPtr p, IntPtr rl);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveExecWriteRequest")]
#else
            [DllImport("__Internal", EntryPoint = "daveExecWriteRequest")]
#endif
            protected static extern int daveExecWriteRequest32(IntPtr dc, IntPtr p, IntPtr rl);
            public int execWriteRequest(PDU p, resultSet rl)
            {
                if (IntPtr.Size == 8)
                    return daveExecWriteRequest64(pointer, p.pointer, rl.pointer);
                return daveExecWriteRequest32(pointer, p.pointer, rl.pointer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveUseResult")]
#else
            [DllImport("__Internal", EntryPoint = "daveUseResult")]
#endif
            protected static extern int daveUseResult64(IntPtr dc, IntPtr rs, int number, byte[] buffer);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveUseResult")]
#else
            [DllImport("__Internal", EntryPoint = "daveUseResult")]
#endif
            protected static extern int daveUseResult32(IntPtr dc, IntPtr rs, int number, byte[] buffer);
            public int useResult(resultSet rs, int number, byte[] buffer)
            {
                if (IntPtr.Size == 8)
                    return daveUseResult64(pointer, rs.pointer, number, buffer);
                return daveUseResult32(pointer, rs.pointer, number, buffer);
            }


#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveReadSZL")]
#else
            [DllImport("__Internal", EntryPoint = "daveReadSZL")]
#endif
            protected static extern int daveReadSZL64(IntPtr dc, int id, int index, byte[] buffer, int len);
#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveReadSZL")]
#else
            [DllImport("__Internal", EntryPoint = "daveReadSZL")]
#endif
            protected static extern int daveReadSZL32(IntPtr dc, int id, int index, byte[] buffer, int len);

            public int readSZL(int id, int index, byte[] buffer)
            {
                if (IntPtr.Size == 8)
                    return daveReadSZL64(pointer, id, index, buffer, buffer.Length);
                return daveReadSZL32(pointer, id, index, buffer, buffer.Length);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveStart")]
#else
            [DllImport("__Internal", EntryPoint = "daveStart")]
#endif
            protected static extern int daveStart64(IntPtr dc);
#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveStart")]
#else
            [DllImport("__Internal", EntryPoint = "daveStart")]
#endif
            protected static extern int daveStart32(IntPtr dc);

            public int start()
            {
                if (IntPtr.Size == 8)
                    return daveStart64(pointer);
                else
                    return daveStart32(pointer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveStop")]
#else
            [DllImport("__Internal", EntryPoint = "daveStop")]
#endif
            protected static extern int daveStop64(IntPtr dc);
#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveStop")]
#else
            [DllImport("__Internal", EntryPoint = "daveStop")]
#endif
            protected static extern int daveStop32(IntPtr dc);

            public int stop()
            {
                if (IntPtr.Size == 8)
                    return daveStop64(pointer);
                else
                    return daveStop32(pointer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveForce200")]
#else
            [DllImport("__Internal", EntryPoint = "daveForce200")]
#endif
            protected static extern int daveForce200_64(IntPtr dc, int area, int start, int val);
#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveForce200")]
#else
            [DllImport("__Internal", EntryPoint = "daveForce200")]
#endif
            protected static extern int daveForce200_32(IntPtr dc, int area, int start, int val);

            public int force200(int area, int start, int val)
            {
                if (IntPtr.Size == 8)
                    return daveForce200_64(pointer, area, start, val);
                else
                    return daveForce200_32(pointer, area, start, val);
            }


#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveForceDisconnectIBH")]
#else
            [DllImport("__Internal", EntryPoint = "daveForceDisconnectIBH")]
#endif
            protected static extern int daveForceDisconnectIBH64(IntPtr dc, int src, int dest, int MPI);
